--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sidcup Family Golf</title>
-    <link rel="shortcut icon" href="/Assests/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon-32x32.png" type="image/x-icon">
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css"
     rel="stylesheet"/>
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="nav">
-        <img src="/Assests/logo-white.png" alt="">
+        <img src="logo-white.png" alt="">
         <h4>TOPTRACER RANGE</h4>
         <h4>GOLF LESSONS</h4>
         <h4>ADVENTURE GOLF</h4>
@@ -21,7 +21,7 @@
     </div>
     <div id="cursor"></div>
     <div id="cursorBlur"></div>
-    <video autoplay loop muted src="/Assests/hero.mp4"></video>
+    <video autoplay loop muted src="hero.mp4"></video>
     <div id="main">
         <div id="page1">
             <h1>EAT.DRINK.PLAY</h1>
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div id="aboutUs">
-                <img src="/Assests/page2-right.avif" alt="">
+                <img src="page2-right.avif" alt="">
                 <div id="aboutUsIn">
                     <h3>ABOUT US</h3>
                 <p>Home to a 46-bay, multi-tier, floodlit driving range, powered by Toptracer Range technology.
@@ -55,7 +55,7 @@
                     something for everyone as we also boast two outdoor 18-hole dinosaur themed crazy golf courses.
                 </p>
                 </div>
-                <img src="/Assests/page2-left.avif" alt="">
+                <img src="page2-left.avif" alt="">
             </div>
             <div id="cardContainer" >
                 <div id="card1" class="card" data-tilt="">
